# sclerp_motion_planner_plugin

./: CMakeLists.txt  README.md  package.xml  sclerp_motion_planner_plugin_description.xml
include/sclerp_interface/: sclerp_interface.h  sclerp_planning_context.h
src/: sclerp_interface.cpp  sclerp_planner_manager.cpp  sclerp_planning_context.cpp
