<?xml version="1.0"?>
<package>
  <name>sclerp_motion_planner_plugin</name>
  <version>1.0.0</version>
  <description>The moveit_sclerp_planner plugin package</description>
  <license>TODO</license>
  
  <author>Dasharadhan Mahalingam</author>
  
  <maintainer email="das.mahalingam@gmail.com">Dasharadhan Mahalingam</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  
  <run_depend>pluginlib</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  
  <export>
    <!-- ScLERP planner plugin for MoveIt -->
    <moveit_core plugin="${prefix}/sclerp_motion_planner_plugin_description.xml"/>
  </export>
  
</package>
